Remove both an enemy and a missile after hitting

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div id="ocean">
-		<div id="info"></div>
+		<div id="info">Score: <div id="score" class="score">0</div></div>
 		<div id="players"></div>
 		<div id="enemies"></div>
 		<div id="missiles"></div>
